# ai-weekly-insights

./: .env.example  .gitignore  README.md  pyproject.toml  summarize.py
prompts/: anomaly_radar.md  exec_brief.md  fortune_teller.md  mandalorian.md  weekly_trends.md
